Fixed a visibility issue in the sidebar

--- a/static_files/scss/jj-sidemenu.scss
+++ b/static_files/scss/jj-sidemenu.scss
@@ -2,6 +2,9 @@
 @import 'vars';
 @import 'mixins';
 
+// Visibility fix for servicebar
+
+
 #branded .side-menu {
 	position         : fixed;
 	z-index          : 98;
@@ -10,6 +13,7 @@
 	width            : 85px;
 	height           : 100%;
 	background-color : #222426;
+	@include backface-visibility(hidden);
 
 	.logo {
 		display : none;
